# neural-network

./: .gitignore  README.md  pyproject.toml
neural_network/: draw.py  draw1.py  get_data.py  main.py  network.py
