[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Valdemar Emil Otte Petersen <36330221+ValdemarOtte@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "neural_network"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
